...
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_person_black_24dp"
                                android:tint="@color/colorText"
                                tools:ignore="VectorDrawableCompat" />
                            <EditText
                                android:id="@+id/rgetName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapWords"
                                android:layout_marginLeft="@dimen/size_12dp"
                                android:hint="@string/fullname"
                                android:background="@null"
...
                                android:layout_marginLeft="@dimen/size_12dp"
                                android:padding="@dimen/size_14dp"
                                android:enabled="false"
                                android:background="@null"
                                android:text="+62"/>
                            <EditText
                                android:id="@+id/rgetPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:hint="@string/phone"
                                android:background="@null"
                                android:paddingTop="@dimen/size_14dp"
...
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_email_black_24dp"
                                android:tint="@color/colorText"
                                tools:ignore="VectorDrawableCompat" />
                            <EditText
                                android:id="@+id/rgetEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="Email"
                                android:background="@null"
                                android:padding="@dimen/size_14dp"
...
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_lock_black_24dp"
                                tools:ignore="VectorDrawableCompat"
                                android:tint="@color/colorText"/>
                            <EditText
                                android:id="@+id/rgPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:layout_marginLeft="@dimen/size_12dp"
                                android:padding="@dimen/size_14dp"
...
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/ic_lock_black_24dp"
                                tools:ignore="VectorDrawableCompat"
                                android:tint="@color/colorText"/>
                            <EditText
                                android:id="@+id/rgConfirmPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password_confirmation"
                                android:inputType="textPassword"
                                android:layout_marginLeft="@dimen/size_12dp"
                                android:padding="@dimen/size_14dp"
...


                    <Button
                        android:layout_marginTop="@dimen/size_24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rgbtnRegister"
                        android:text="@string/register"
                        android:background="@drawable/shape_rounded_accent"
                        style="@style/Widget.AppCompat.Button.Colored"/>
                    <TextView
                        android:id="@+id/rgbtnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/have_an_account"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/size_14dp"/>
...


    </LinearLayout>

    </ScrollView>

    <include layout="@layout/progress_dialog"
        android:visibility="gone"/>
</RelativeLayout>

